# targoo

./: LICENSE  PROJEKT_ALLAPOT.md  README.md  build-log.txt  full_repo_dump.txt  package-lock.json  package.json  targoo-dump.txt  targoo_codebase.txt
.github/workflows/: build.yml
landing/: index.html
src/: App.jsx  App.jsx.backup  App.jsx.backup2  demoData.js  index.css
src-tauri/: Cargo.toml  esrs_e1.json  esrs_e2.json  esrs_g1.json  esrs_s2.json  esrs_s3.json  tauri.conf.json
src-tauri/data/esrs/: esrs_e3.json  esrs_e4.json  esrs_e5.json  esrs_kb.json  esrs_s4.json  hgb_germany.json  nadiveg_austria.json.txt  swiss_or.json
src-tauri/src/: lib.rs  license.rs  model_downloader.rs
src-tauri/src/l1_rag/: esrs_data.rs  mod.rs
src-tauri/src/l2_gap_analysis/: mod.rs
src-tauri/src/l3_report/: mod.rs
src-tauri/src/l4_data_processor/: esrs_mapper.rs  excel_cleaner.rs  json_parser.rs  mod.rs  pdf_parser.rs  xml_parser.rs
src-tauri/src/l5_prediction/: mod.rs
src-tauri/src/l6_audit/: mod.rs
src-tauri/src/l7_materiality/: mod.rs
src-tauri/src/l8_workspace/: mod.rs
src-tauri/src/normalize/: mod.rs
src-tauri/src/state/: mod.rs
